chore: add small fixes for handin

--- a/lab2_1/simulator/Makefile
+++ b/lab2_1/simulator/Makefile
@@ -1,5 +1,7 @@
 SIM = sim/build/Simulator
 TARGET = test/build/$(T).bin
+MODE ?= batch
+MEM_TRACE ?= OFF
 
 all:
 	@echo "-------Build Simulator-------"
@@ -7,10 +9,16 @@ all:
 	@echo "-------Build Test-------"
 	@$(MAKE) -C test T=$(T)
 	@echo "-------Start Simulation-------"
-	@$(SIM) --batch $(TARGET)
+ifeq ($(MEM_TRACE), ON)
+	@$(SIM) --$(MODE) --mem-trace $(TARGET)
+	@echo "make: use \"cat memtrace.out\" to check the memtrace."
+else
+	@$(SIM) --$(MODE) $(TARGET)
+endif
 
 clean:
 	@$(MAKE) -C sim clean
 	@$(MAKE) -C test clean
+	rm -f memtrace.out
 
 .PHONY: clean all
