--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,12 @@
 
   "customizations": {
     "vscode": {
-      "extensions": ["ms-vscode.cpptools-extension-pack"]
+      "extensions": ["ms-vscode.cpptools-extension-pack", "github.copilot", "github.copilot-chat"]
     }
+  },
+
+  "containerEnv": {
+    "http_proxy": "http://host.docker.internal:7890",
+    "https_proxy": "http://host.docker.internal:7890"
   }
 }
