feat: lab3.2 vanilla profile

--- a/sim/Makefile
+++ b/sim/Makefile
@@ -6,6 +6,7 @@ CPP_SRC = $(wildcard src/*.cpp)
 OBJS    = $(addprefix $(BUILD)/objs/, $(notdir $(C_SRC:.c=.o) $(CPP_SRC:.cpp=.o)))
 SIMULATOR = $(BUILD)/Simulator
 CACHE_SIMULATOR = $(BUILD)/CacheSimulator
+CHCHE_SIMULATOR3-2 = $(BUILD)/CacheSimulator3-2
 
 ## 2. General Compilation Flags
 CC  = gcc
@@ -16,7 +17,7 @@ CXXFLAGS = $(CFLAGS)
 LDFLAGS = -lstdc++
 
 ## 3. Rules
-all: $(SIMULATOR) $(CACHE_SIMULATOR)
+all: $(SIMULATOR) $(CACHE_SIMULATOR) $(CHCHE_SIMULATOR3-2)
 
 $(BUILD)/objs/%.o: src/%.c
 	@echo + CC "->" $<
@@ -31,6 +32,10 @@ $(SIMULATOR): src/executable/sim.c $(OBJS)
 	$(CC) $(CXXFLAGS) $^ -o $@ $(LDFLAGS)
 
 $(CACHE_SIMULATOR): src/executable/cache_sim.cpp $(OBJS)
+	@echo + CXX "->" $^
+	$(CXX) $(CXXFLAGS) $^ -o $@ $(LDFLAGS)
+
+$(CHCHE_SIMULATOR3-2): src/executable/cache_sim_lab3-2.cpp $(OBJS)
 	@echo + CXX "->" $^
 	$(CXX) $(CXXFLAGS) $^ -o $@ $(LDFLAGS)
 
