--- a/lab-4/lab4-1/Makefile
+++ b/lab-4/lab4-1/Makefile
@@ -1,5 +1,5 @@
 CXX = g++
-CXXFLAGS = -Wall -Wextra -O2 -std=c++17
+CXXFLAGS = -Wall -Wextra -O2 -std=c++17 -mavx2 -mfma -O3
 # CXXFLAGS = -g -std=c++17
 BUILD = build
 
